[ci] Github Actions build linux-arm64

--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -29,3 +29,6 @@ jobs:
 
     - name: Test Integration
       run: sudo -E env PATH=$PATH go test -v -tags=integration ./...
+
+    - name: Linux ARM64 build
+      run: GOOS=linux GOARCH=arm64 go build ./...
