--- a/nftables.conf
+++ b/nftables.conf
@@ -3,7 +3,7 @@ flush ruleset
 
 table inet filter {
   flowtable f {
-    hook ingress priority 0; devices = { ${wan}, ${lan} };
+    hook ingress priority 0; devices = { wan, br-lan };
   }
 
   set blocklist4 {
@@ -22,9 +22,9 @@ table inet filter {
 
   chain input {
     type filter hook input priority 0; policy drop;
-    iifname "${lan}" accept
-    iifname "${wan}" ct state { established, related } accept
-    iifname "${wan}" drop
+    iifname "br-lan" accept
+    iifname "wan" ct state { established, related } accept
+    iifname "wan" drop
   }
 
   chain sniqueue {
@@ -57,8 +57,8 @@ table inet filter {
     type filter hook forward priority 0; policy drop;
     ct mark != 102 flow offload @f comment "Offload packets not sent to SNIqueue"
 
-    iifname "${lan}" oifname "${wan}" accept
-    iifname "${wan}" oifname "${lan}" ct state established,related accept
+    iifname "br-lan" oifname "wan" accept
+    iifname "wan" oifname "br-lan" ct state established,related accept
   }
 }
 
@@ -70,6 +70,6 @@ table ip nat {
   # Setup NAT masquerading on the wan interface
   chain postrouting {
     type nat hook postrouting priority 0; policy accept;
-    oifname "${wan}" masquerade
+    oifname "wan" masquerade
   }
 }
